# Design2-MG

./: .gitignore  README.md
Assets/Backgrounds/: background link.txt
Assets/Levels/: lvl0.xml  lvl1.xml  lvl2.xml
Audio/: Credit.txt
MonsterGenome/: Armor.cpp  Armor.h  CMakeLists.txt  Character.cpp  Character.h  Enemy.cpp  Game.cpp  Game.h  GameState.cpp  GameState.h  Hero.cpp  Hero.h  LoadAssets.cpp  LoadAssets.h  Menu.cpp  Menu.h  Pause.cpp  Pause.h  Platforms.cpp  Platforms.h  Projectile.cpp  Projectile.h  Settings.cpp  Settings.h  StateManager.cpp  StateManager.h  Weapon.cpp  Weapon.h  main.cpp  makefile
MonsterGenome/HeaderFiles/: AudioHandler.h  Character.h  Enemy.h  Game.h  GameState.h  HeroMod.h  Interface.h  Inventory.h  Items.h  LoadMenu.h  MeleeWeapon.h  Menu.h  Pause.h  Pistol.h  Platforms.h  Projectile.h  RangedWeapon.h  SaveLoadMenu.h  SaveMenu.h  Settings.h  StartMenu.h  Sword.h  Weapons.h
MonsterGenome/SourceFiles/: Armor.cpp  AudioHandler.cpp  Character.cpp  Enemy.cpp  Game.cpp  GameState.cpp  Hero.cpp  HeroMod.cpp  Interface.cpp  Inventory.cpp  Items.cpp  LoadAssets.cpp  LoadMenu.cpp  MeleeWeapon.cpp  Menu.cpp  Pause.cpp  Pistol.cpp  Platforms.cpp  Projectile.cpp  RangedWeapon.cpp  SaveLoadMenu.cpp  SaveMenu.cpp  Settings.cpp  StartMenu.cpp  Sword.cpp  Weapon.cpp  Weapons.cpp
Saves/Slot 0/: save.xml  time.txt
Saves/Slot 1/: save.xml  time.txt
Saves/Slot 3/: save.xml
Saves/Slot 4/: save.xml
Settings/: Controls - Copy.csv  Controls - Master.csv  Controls.csv
WeaponStats/: Weapons.csv
